<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="button1">Calculate BMI</string>
    <string name="years">Years</string>
    <string name="Result">Result</string>
    <string name="Normal_BMI">Normal BMI range:18.5 -25</string>
    <string name="strFeet">feet</string>
    <string name="strInches">inches</string>
    <integer name="labelSize">32</integer>
</resources>
