<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bmicalculator.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/age"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="12dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/textView"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/textView2"
        android:text="@string/height"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="161dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@id/textView"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/textView7"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/strFeet"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText2"
        android:ems="10"
        android:hint="@string/strInches"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:text="@string/button1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textview5"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/textView7"
        android:layout_below="@+id/textview5"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/textView4"
        android:textAlignment="center"
        android:textSize="24sp" />

</RelativeLayout>
